src2/aop-hipified/log_run_bench.err
main.cu:1057:27: error: no matching function for call to 'normcdf'
 1057 |   return K*std::exp(-r*T)*normcdf(-d2) - S0*normcdf(-d1);
      |                           ^~~~~~~
/opt/rocm-6.2.0/lib/llvm/lib/clang/18/include/__clang_hip_math.h:1006:8: note: candidate function not viable: call to __device__ function from __host__ function
 1006 | double normcdf(double __x) { return __ocml_ncdf_f64(__x); }
      |        ^
main.cu:1057:45: error: no matching function for call to 'normcdf'
 1057 |   return K*std::exp(-r*T)*normcdf(-d2) - S0*normcdf(-d1);
      |                                             ^~~~~~~
/opt/rocm-6.2.0/lib/llvm/lib/clang/18/include/__clang_hip_math.h:1006:8: note: candidate function not viable: call to __device__ function from __host__ function
 1006 | double normcdf(double __x) { return __ocml_ncdf_f64(__x); }
      |        ^
main.cu:1065:13: error: no matching function for call to 'normcdf'
 1065 |   return S0*normcdf(d1) - K*std::exp(-r*T)*normcdf(d2);
      |             ^~~~~~~
/opt/rocm-6.2.0/lib/llvm/lib/clang/18/include/__clang_hip_math.h:1006:8: note: candidate function not viable: call to __device__ function from __host__ function
 1006 | double normcdf(double __x) { return __ocml_ncdf_f64(__x); }
      |        ^
main.cu:1065:44: error: no matching function for call to 'normcdf'
 1065 |   return S0*normcdf(d1) - K*std::exp(-r*T)*normcdf(d2);
      |                                            ^~~~~~~
/opt/rocm-6.2.0/lib/llvm/lib/clang/18/include/__clang_hip_math.h:1006:8: note: candidate function not viable: call to __device__ function from __host__ function
 1006 | double normcdf(double __x) { return __ocml_ncdf_f64(__x); }
      |        ^
4 errors generated when compiling for gfx90a.
failed to execute:/opt/rocm-6.2.0/lib/llvm/bin/clang++  --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a  -std=c++14 -Wall -O3 -c -x hip main.cu -o "main.o"
make: *** [Makefile.AMD:50: main.o] Error 1
